--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,21 @@
 MANIFEST
-MANIFEST.bak
-Makefile
-Makefile.old
-Build
-Build.bat
 META.*
 MYMETA.*
-.build/
 _build/
-cover_db/
+.build/
+build/
 blib/
 inc/
-.lwpcookies
-.last_cover_stats
-nytprof.out
-pod2htm*.tmp
 pm_to_blib
-Plack-Middleware-Debug-RefCounts-*
-Plack-Middleware-Debug-RefCounts-*.tar.gz
+.*.sw?
 .nfs*
+*#
+.#*
+*~
+*.bak
+*.old
 cpanfile.snapshot
-local
-.perl-*.installed
-.perl-*.tested
+local/
 .perl-version
-*.sw?
+Plack-Middleware-Debug-RefCounts-*/
+Plack-Middleware-Debug-RefCounts-*.tar.*
